crates/apollo-compiler/test_data/diagnostics/0113_partially_overlapping_fragments.txt
Error: operation must not select different types using the same field name `overlapping`
    ╭─[0113_partially_overlapping_fragments.graphql:27:16]
    │
 24 │     ... on B { overlapping }
    │                ─────┬─────  
    │                     ╰─────── `overlapping` has type `Int!` here
    │ 
 27 │     ... on C { overlapping }
    │                ─────┬─────  
    │                     ╰─────── but the same field name has type `Int` here
────╯

